--- a/app/templates/page_etablissement.html
+++ b/app/templates/page_etablissement.html
@@ -9,9 +9,8 @@
 
     <!-- Grille des flans avec bouton d'ajout -->
     <div class="flans-section">
-        <h3>Flans proposée</h3>
+        <h3>Flans</h3>
         {{ afficher_grille('flan', etablissement.flans, current_user, None, form_flan, etablissement) }}
-
     </div>
     <!-- Bouton retour -->
     <div>
